glyph-cell-macros/tests/ui/bitmap_font_type_alias_removed_fail.rs
use glyph_cell::BitmapFont;

fn main() {
    let _font: Option<BitmapFont<'static>> = None;
}
